--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <title>CORREÇÃO!</title>
+    <title>Primeiro projeto</title>
     <link rel="stylesheet" href="style/style.css">
     
     
@@ -20,8 +20,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
